--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ repositories {
 
 dependencies {
     compile 'org.deeplearning4j:deeplearning4j-core:0.9.1'    
-    compile 'org.nd4j:nd4j-native-platform:0.9.1'
+    //compile 'org.nd4j:nd4j-native-platform:0.9.1'
+    compile 'org.nd4j:nd4j-cuda-8.0-platform:0.9.1'
     compile 'org.datavec:datavec-api:0.9.1'
     compile 'io.vertx:vertx-core:3.5.0'
     compile 'io.vertx:vertx-web:3.5.0'
